<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="398dp"
        android:layout_height="77dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/lunch_add_title" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/str_add_restaurant_txt"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="345dp">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/editText"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/editText"
            android:layout_toStartOf="@+id/editText"
            android:text="@string/add_restaurant_name" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="273dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:inputType="" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="273dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView4"
            android:layout_gravity="center_horizontal"
            android:layout_toEndOf="@+id/textView4"
            android:layout_toRightOf="@+id/textView4"
            android:inputType="" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/editText2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/editText2"
            android:layout_toLeftOf="@+id/editText2"
            android:layout_toStartOf="@+id/editText2"
            android:text="@string/add_restaurant_menu" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/editText3"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/editText2"
            android:layout_toLeftOf="@+id/editText3"
            android:layout_toStartOf="@+id/editText3"
            android:text="@string/add_restaurant_amount" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="273dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText2"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:inputType="" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/editText4"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView6"
            android:layout_toLeftOf="@+id/editText4"
            android:layout_toStartOf="@+id/editText4"
            android:text="@string/add_restaurant_menu" />

        <EditText
            android:id="@+id/editText4"
            android:layout_width="273dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText3"
            android:layout_gravity="center_horizontal"
            android:layout_toEndOf="@+id/textView6"
            android:layout_toRightOf="@+id/textView6"
            android:inputType="" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/add_restaurant_btn" />
    </RelativeLayout>

</LinearLayout>